Bug 138113 - Base: SQL Syntax Colouring Issue Problem Operators "/", "-"
Summary: Base: SQL Syntax Colouring Issue Problem Operators "/", "-"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.3.5.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-10 14:52 UTC by zeiuttgjyfro
Modified: 2020-11-11 17:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Application Colour Settings (93.90 KB, image/jpeg)
2020-11-10 14:54 UTC, zeiuttgjyfro
Details
Dark system theme sql syntax colours (73.21 KB, image/jpeg)
2020-11-10 14:56 UTC, zeiuttgjyfro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zeiuttgjyfro 2020-11-10 14:52:20 UTC
Description:
LO Version: 6.3.5.2
Build ID: 1:6.3.5-0ubuntu0.19.10.1
OS: Linux 5.3; UI render: default; VCL: kde5;

Base SQL Syntax colours editable by under settings "Application Colours", "Sql Syntax", then "Operator".
All operators respect this setting but except two operators: "/" and "-" (slash, minus). These two operators' "/" and "-" colour always black and not viable in dark themes. Rest of them fine.

Steps to Reproduce:
1.Use a dark system theme, 
2.Change "Application Colours", "Sql Syntax", "Operator" colour as your wish,
3.Then edit a query in sql view that is containing some arithmetic operators including "+", "*", ">", "/" and "-".

Actual Results:
These "/" and "-" always black and not viable in dark themes. Rest of them fine.

Expected Results:
All operators' colour must respect "Application Colours", "Sql Syntax", "Operator" colours.  


Reproducible: Always


User Profile Reset: No



Additional Info:
None
Comment 1 zeiuttgjyfro 2020-11-10 14:54:53 UTC
Created attachment 167169 [details]
Application Colour Settings
Comment 2 zeiuttgjyfro 2020-11-10 14:56:20 UTC
Created attachment 167170 [details]
Dark system theme sql syntax colours
Comment 3 Julien Nabet 2020-11-11 11:22:22 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2020-11-11 11:22:36 UTC
Let's give it a try with:
https://gerrit.libreoffice.org/c/core/+/105581
Comment 5 Commit Notification 2020-11-11 15:22:08 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2b290da0922246f8fb5fcd332bbd41ad165fd43

tdf#138113: Base SQL syntax colouring issue with operators "/", "-"

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2020-11-11 15:23:11 UTC
I submitted https://gerrit.libreoffice.org/c/core/+/105537 for branch 7.0
Comment 7 Commit Notification 2020-11-11 17:15:10 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/710947f020eb5dda72add8a08534a4836732e596

tdf#138113: Base SQL syntax colouring issue with operators "/", "-"

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.