tdf#138113: Base SQL syntax colouring issue with operators "/", "-"

Change-Id: If268d7731642a6503418ca187b4fe85a889d1d2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105581

(cherry picked from commit e2b290da0922246f8fb5fcd332bbd41ad165fd43)

Change-Id: Ib359c8e024b4899b67e381a16f183232bfe88bec